[package]
name = "rd"
version = "0.1.0"
edition = "2018"
license = "BSD+Patent"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
rustdoc-types = "0.4"
serde_json = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
pulldown-cmark = { version = "0.8", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.2.0"
markup = "0.12"
typed-arena = "2.0"
open = "2"
